2008-11-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Jim Meyering  <jim@meyering.net>

	Cope with whitespace in $MISSING and $install_sh.
	* configure.ac (am_AUTOHEADER): New substitution, save the value
	of $AUTOHEADER before AM_INIT_AUTOMAKE may add $MISSING.
	* tests/defs.in: Use am_AUTOHEADER.
	* lib/am/install.am: Fix typo.
	* m4/install-sh.m4 (AM_PROG_INSTALL_SH): Add suitable
	single-quote quoting to install_sh, but only if needed.
	* m4/missing.m4 (AM_MISSING_HAS_RUN): Add suitable double-quote
	quoting to MISSING, but only if needed.
	* m4/sanity.m4 (AM_SANITY_CHECK): Abort configure if `pwd` or
	$srcdir contain shell meta-characters that cannot be handled;
	space and tab are allowed in the former only.
	* tests/sanity.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.
	Reports by Jim Meyering and others.

2008-11-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Let `missing' also work with versioned and prefixed programs.
	* lib/missing: Ignore prefixes of `gnu-', `gnu', and `g' when
	testing for known programs; also, ignore suffixes.
	* tests/missing.test: Amend test.
	* NEWS, THANKS: Update.
	Report by Tim Rice.

2008-11-23  William Pursell  <bill.pursell@gmail.com>

	* doc/automake.texi (Macro search path, Extending aclocal)
	(Local Macros, Serials, Public macros, Directories)
	(Conditional Subdirectories, Nesting Packages)
	(Building a program, Libtool Modules)
	(Program and Library Variables, Default _SOURCES, LIBOBJS):
	Correct verb/object tense agreement, swap some words,
	and general trivial cleanup.

2008-11-22  William Pursell  <bill.pursell@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (VPATH Builds, Nested Packages)
	(Length limitations, Auxiliary Programs, Invoking Automake)
	(Requirements, Optional): Fix typos and grammaros, correct URL
	to 'config' source repository.  Rewrite description of AC_SUBST.
	(true): Cross-reference to `Default _SOURCES' node.
