@@ -125,6 +125,7 @@ James Amundson		amundson@users.sourceforge.net
 James Henstridge	james@daa.com.au
 James R. Van Zandt	jrv@vanzandt.mv.com
 James Youngman		jay@gnu.org
+Jan Engelhardt		jengelh@medozas.de
 Janos Farkas		chexum@shadow.banki.hu
 Jared Davis		abiword@aiksaurus.com
 Jason Duell		jcduell@lbl.gov
