@@ -1,4 +1,15 @@
 2008-11-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix portability issues in distcleancheck_listfiles doc example.
+	* doc/automake.texi (Dist): In the `distcleancheck_listfiles'
+	code example, add `.' path, for Solaris `find', also rewrite so
+	`{}' appears only once and as separate argument, for Posix.
+	* tests/distcleancheck.test: New test.
+	* tests/Makefile.am: Update.
+	* THANKS: Update.
+	Report by Jan Engelhardt and Andreas Schwab.
+
+2008-11-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 	    Jim Meyering  <jim@meyering.net>
 
 	Cope with whitespace in $MISSING and $install_sh.
